Color fixes for dark mode on homepage

--- a/src/app/pages/about/features/features.component.scss
+++ b/src/app/pages/about/features/features.component.scss
@@ -5,3 +5,7 @@ p {
     font-size: 18px;
   }
 }
+
+.bg-white{
+  color: #000 !important;
+}
