--- a/src/app/pages/about/pricing/pricing.component.scss
+++ b/src/app/pages/about/pricing/pricing.component.scss
@@ -9,3 +9,7 @@
   padding: 30px;
   margin-top: 20px;
 }
+
+.color-fix{
+  color: #000 !important;
+}
